# cpp-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
inc/: AmbienceObject.h  App.h  CollisionShape.h  Crosshair.h  Defines.h  Enemy.h  EventHandler.h  Game.h  GameObject.h  GameStateMachine.h  GameStates.h  InputHandler.h  Main.h  MenuButton.h  MenuState.h  PlayState.h  Player.h  Projectile.h  Rectangle2D.h  TextureHandler.h  UpdateHandler.h  Vector2D.h  main.hpp
inc/States/: MenuState.h  PlayState.h
inc/util/: Defines.h  EventHandler.h  InputHandler.h  LoaderParams.h  TextureHandler.h
src/: AmbienceObject.cpp  App.cpp  Crosshair.cpp  Enemy.cpp  EventHandler.cpp  Game.cpp  GameObject.cpp  GameStateMachine.cpp  InputHandler.cpp  Main.cpp  MenuButton.cpp  MenuState.cpp  PlayState.cpp  Player.cpp  Rectangle2D.cpp  TextureHandler.cpp  UpdateHandler.cpp  main.cpp  window.cpp
